[project]
name = "encryption-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "Shaaswat",email = "shaaswatkjha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography (>=44.0.2,<45.0.0)",
    "click (>=8.1.8,<9.0.0)"
]

[tool.poetry]
packages = [{include = "encryption_tool", from = "src"}]


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
